add numeratives family and atomicity diagnostics

--- a/data/constructions/numerative-basic-lexeme-001.yaml
+++ b/data/constructions/numerative-basic-lexeme-001.yaml
@@ -20,6 +20,8 @@ meanings:
 constraints:
   - type: morphological
     description: Behaves as a lexical unit for syntax (no internal coordination or modification).
+syntacticRefs:
+  - basic-numerative-atomicity
 semanticRefs:
   - cardinality
 relatedConstructions:
