--- a/data/constructions/numerative-compound-basic-001.yaml
+++ b/data/constructions/numerative-compound-basic-001.yaml
@@ -21,6 +21,8 @@ formRefs:
 semanticRefs:
   - cardinality
   - additive-composition
+syntacticRefs:
+  - basic-numerative-atomicity
 relatedConstructions:
   - id: numerative-basic-lexeme-001
     relationship: specialization-of
