--- a/data/constructions/subject-determiner-001.yaml
+++ b/data/constructions/subject-determiner-001.yaml
@@ -3,15 +3,19 @@ name: Subject-determiner (Genitive NP)
 pattern: "NP[genitive] + N"
 meanings:
   '1':
-    definition: Genitive NP realizes determiner function, typically signaling possession or association
+    definition: Genitive NP realizes determiner function with a subject-like semantic relation to the head nominal
     examples:
       - form: "Ally's new car"
         note: Genitive NP as determiner
       - form: "the boy's shoes"
         note: Definite genitive determiner
+      - form: "Brett's use of the microphone"
+        note: Genitive NP corresponds to the subject/agent of the nominalization
 constraints:
   - type: syntactic
     description: Genitive NP occupies the determiner position in NP structure.
+  - type: semantic
+    description: Genitive NP stands in a subject-like relation to the head noun (e.g., agent/experiencer of a nominalized predicate).
 formRefs:
   - subject-determiner-genitive
 syntacticRefs:
