--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "validate": "node scripts/validate.js && node scripts/lint.js",
     "lint": "node scripts/lint.js",
-    "build:web": "node scripts/build-web-manifest.js"
+    "build:web": "node scripts/build-web-manifest.js",
+    "web": "node scripts/serve-web.js"
   },
   "dependencies": {
     "ajv": "^8.12.0",
