--- a/data/constructions/numerative-factor-modifier-001.yaml
+++ b/data/constructions/numerative-factor-modifier-001.yaml
@@ -1,13 +1,13 @@
 id: numerative-factor-modifier-001
 name: Factor + Magnitude Numerative
-pattern: "Det[factor] + Det[magnitude] (+ N)"
+pattern: "Det[factor] + Det[magnitude]"
 meanings:
   '1':
     definition: Multiplicative numerative built by combining a factor with a magnitude head
     examples:
-      - form: two hundred books
+      - form: two hundred
         note: 2 × 100
-      - form: forty-two million people
+      - form: forty-two million
         note: 42 × 1,000,000
 constraints:
   - type: structural
