--- a/data/constructions/numerative-teen-001.yaml
+++ b/data/constructions/numerative-teen-001.yaml
@@ -1,13 +1,13 @@
 id: numerative-teen-001
 name: Regular Teen Numerative (-teen)
-pattern: "Det[teen] + N"
+pattern: "Det[teen]"
 meanings:
   '1':
     definition: Specifies a cardinality from thirteen to nineteen via -teen morphology
     examples:
-      - form: thirteen pages
+      - form: thirteen
         note: Cardinality 13
-      - form: nineteen students
+      - form: nineteen
         note: Cardinality 19
 formRefs:
   - numerative-teen
