--- a/data/constructions/numerative-addition-coordination-001.yaml
+++ b/data/constructions/numerative-addition-coordination-001.yaml
@@ -28,5 +28,7 @@ relatedConstructions:
     relationship: contains
   - id: numerative-addition-asyndetic-001
     relationship: alternates-with
+  - id: numerative-complex-001
+    relationship: related-to
   - id: numerative-magnitude-head-001
     relationship: related-to
