--- a/data/indices/families.yaml
+++ b/data/indices/families.yaml
@@ -17,6 +17,7 @@ families:
       - numerative-teen-001
       - numerative-decade-001
       - numerative-compound-basic-001
+      - numerative-complex-001
       - numerative-magnitude-head-001
       - numerative-factor-modifier-001
       - numerative-addition-coordination-001
