add cardinal determinative

--- a/data/constructions/numerative-basic-lexeme-001.yaml
+++ b/data/constructions/numerative-basic-lexeme-001.yaml
@@ -25,6 +25,8 @@ syntacticRefs:
 semanticRefs:
   - cardinality
 relatedConstructions:
+  - id: cardinal-determinative-001
+    relationship: specialization-of
   - id: numerative-single-digit-001
     relationship: contains
   - id: numerative-ten-001
